@@ -46,7 +46,8 @@ roxy.package(
         person(given=\"Søren\", family=\"Højsgaard\", role=c(\"ctb\")),
         person(given=\"John\", family=\"Fox\", role=c(\"ctb\")),
         person(given=\"Michael A.\", family=\"Lawrence\", role=c(\"ctb\")),
-        person(given=\"Ulf\", family=\"Mertens\", role=c(\"ctb\"))
+        person(given=\"Ulf\", family=\"Mertens\", role=c(\"ctb\")),
+        person(given=\"Jonathan\", family=\"Love\", role=c(\"ctb\"))
     )",
 		Depends = "R (>= 3.1.0), lme4 (>= 1.1-8), reshape2, lsmeans (>= 2.17)",
 		Suggests = "ascii, xtable, parallel, plyr, optimx, nloptr, knitr, rmarkdown, lattice, multcomp, testthat, mlmRev, dplyr",
